--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-3.58MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-usa3-242, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇨🇳 中国-14.80MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40208, type: trojan, password: 379105df-ad74-3c8a-ace3-5832de8f973a, sni: trojan.linkdns.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.46MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40202, type: trojan, password: a04f6f85-18a7-3f41-8389-663ebae403cf, sni: trojan.linkdns.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-274.9KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.63MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-440.2KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇸🇬 新加坡-303.6KB/s(Youtube:不良林), server: 626sg05.ok365.cyou, port: 443, type: trojan, password: 8ca09dac-c2d3-4aeb-87e5-26b64ebcf5cf, sni: 626sg05.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇨🇳 (已存活1天)中国-10.95MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-471.9KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
   - {name: 🇺🇸 美国-5.50MB/s(Youtube:不良林), server: c86s3.jamjams3.net, port: 31567, type: vmess, uuid: 7e98d7df-0fc1-45f3-8a0c-f840218b4c22, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-16.32MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20727, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-13.25MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20727, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.18MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-10.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-10.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-10.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-10.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-10.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-10.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-3.58MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-274.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.63MB/s(Youtube:不良林)
-      - 🇨🇳 中国-440.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-303.6KB/s(Youtube:不良林)
+      - 🇨🇳 (已存活1天)中国-10.95MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-16.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.18MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
 rules:
