--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-3.62MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-10.73MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40202, type: trojan, password: a04f6f85-18a7-3f41-8389-663ebae403cf, sni: trojan.linkdns.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.46MB/s(Youtube:不良林), server: 112.64.98.133, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 112.64.98.133}}
-  - {name: 🇯🇵 日本-3.27MB/s(Youtube:不良林), server: 81.90.190.218, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-363.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.81MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: rbzz.jddsb.cf, port: 1003, type: vmess, uuid: 104ef5de-c177-464c-b3cc-6063a4afe97a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: rbzz.jddsb.cf}}
+  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: c86s1.jamjams3.net, port: 31567, type: ss, cipher: aes-256-gcm, password: VFZncMwjr6VGtEyk}
   - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: c86s2.jamjams3.net, port: 31567, type: ss, cipher: aes-256-gcm, password: VFZncMwjr6VGtEyk}
   - {name: 🇺🇸 美国-546.1KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.36MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 未知国家-4.36MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
   - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 未知国家-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 未知国家-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 未知国家-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 未知国家-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 未知国家-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 未知国家-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.46MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.36MB/s(Youtube:不良林)
+      - 未知国家-4.36MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
