--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-363.6KB/s(Youtube:不良林), server: 194.124.35.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-3.81MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: rbzz.jddsb.cf, port: 1003, type: vmess, uuid: 104ef5de-c177-464c-b3cc-6063a4afe97a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: rbzz.jddsb.cf}}
-  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-1.78MB/s(Youtube:不良林), server: 81.90.190.218, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-403.8KB/s(Youtube:不良林), server: 194.124.35.42, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-2.17MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8060, type: ss, cipher: aes-128-gcm, password: 66f661b6-d148-493a-ae9a-c1b65ff2e669}
+  - {name: 🇺🇸 美国-188.0KB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: c86s1.jamjams3.net, port: 31567, type: ss, cipher: aes-256-gcm, password: VFZncMwjr6VGtEyk}
   - {name: 🇺🇸 美国-2.54MB/s(Youtube:不良林), server: c86s2.jamjams3.net, port: 31567, type: ss, cipher: aes-256-gcm, password: VFZncMwjr6VGtEyk}
   - {name: 🇺🇸 美国-546.1KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-363.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.81MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.78MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-403.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-188.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.54MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
